@@ -7,6 +7,7 @@
 - Remove custom game creation
 - Fix earmark warnings not getting cleared up when disabling the setting
 - Fix capitalization in print multiple dialog
+- Fix right to left text direction for arrow keys
 
 49.0 - September 12, 2025
 ==========================
